test/asm/const-not.err
error: const-not.asm(3):
    Assertion failed
error: Assembly aborted (1 error)!
