test/asm/const-not.asm
section "test", rom0, align[8]
ds 42
assert !@
